--- a/anual/frontend/html/registration/signup.html
+++ b/anual/frontend/html/registration/signup.html
@@ -26,6 +26,7 @@
 					<a class="btn-primary w-100" href="./signupLE.html">Sign up as Legal Entity</a>
 					<a class="btn-primary w-100" href="./signupIND.html">Sign up as Individual</a>
 				</div>
+				<a class="btn-text w-100" href="./login.html">Already have an account?</a>
 			</form>
 		</div>
 	</body>
