Add failure report
Co-authored-by: Sof <mrabeyfischer@frba.utn.edu.ar>
Co-authored-by: Val <vvalmadreamoia@frba.utn.edu.ar>

--- a/anual/frontend/html/registration/signupIND.html
+++ b/anual/frontend/html/registration/signupIND.html
@@ -64,6 +64,7 @@
 					placeholder="Your full name..."
 					class="col-12 inputs"
 				/>
+				<p>Birth date</p>
 				<input
 					type="date"
 					id="fechaDeNacimiento"
