algunos arreglos al incio

--- a/anual/frontend/inicio.html
+++ b/anual/frontend/inicio.html
@@ -15,15 +15,15 @@
 </head>
 
 <body
-    style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+    style="background-image: url('assets/bg.jpg'); background-size: cover; background-position: center; display: flex; justify-content: center; align-items: center; height: 100vh;">
     <div class="w-100">
         <div class="row align-items-center d-flex w-100">
             <div class="col-md-7" style="text-align: center;">
                 <div class="col-12">
-                    <img height="400px" width="400px" src="imagenes/LogoOriginal.png" alt="Logo">
+                    <img height="400px" width="400px" src="assets/LogoOriginal.png" alt="Logo">
                 </div>
-                <h1 class="slogan col-12">Fride Bridge</h1>
-                <h2 class="slogan col-12">Fighting hunger, feeding hope</h2>
+                <h1 class="slogan col-12" style="font-family: 'Gowun Batang', serif; color:#aaaaaa; font-weight: bold;">Fride Bridge</h1>
+                <h2 class="slogan col-12" style="font-family: 'Gowun Batang', serif; color:#aaaaaa; font-weight: bold;">Fighting hunger, feeding hope</h2>
 
             </div>
             <div class="col-md-5 ">
