--- a/anual/frontend/html/landing.html
+++ b/anual/frontend/html/landing.html
@@ -152,6 +152,25 @@
 			</div>
 
 			<div class="section-space"></div>
+
+			<div class="d-flex justify-content-center bg-accent-100 w-100" style="height: 400px">
+				<section class="d-flex align-items-center justify-content-between">
+					<div
+						class="d-flex w-100 justify-content-between align-items-center"
+						style="gap: 40px"
+					>
+						<h1 class="font-100 text-contrast-100" style="line-height: 150px">
+							Don’t forget You can <br />
+							<span class="bg-accent-200 rounded" style="padding: 10px"
+								>save <span class="accent-100">lives</span></span
+							>
+						</h1>
+						<a href="./registration/signup.html" class="btn-primary cta-btn"
+							>Save a life</a
+						>
+					</div>
+				</section>
+			</div>
 		</div>
 	</body>
 </html>
