--- a/anual/frontend/html/landing.html
+++ b/anual/frontend/html/landing.html
@@ -171,6 +171,57 @@
 					</div>
 				</section>
 			</div>
+
+			<div class="d-flex justify-content-center bg-accent-200 w-100">
+				<section class="d-flex flex-column" style="margin-top: 100px">
+					<div
+						class="d-flex align-items-center justify-content-between"
+						style="gap: 60px"
+					>
+						<div style="flex: 1">
+							<div
+								class="d-flex align-items-center"
+								style="gap: 20px; margin-bottom: 30px"
+							>
+								<img src="../assets/logo.png" alt="" height="60" width="60" />
+								<h5 class="accent-100 normal">FridgeBridge</h5>
+							</div>
+							<p class="text-100">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+								accumsan suscipit hendrerit. Nullam et auctor magna. Curabitur
+								lobortis lorem ac malesuada ultricies. In finibus varius ornare.
+								Donec in laoreet tortor.
+							</p>
+						</div>
+						<div class="d-flex justify-content-between" style="gap: 20px; flex: 1">
+							<div class="d-flex flex-column" style="gap: 15px">
+								<h5 style="margin-bottom: 5px">Legal</h5>
+								<p>Terms and conditions</p>
+								<p>Privacy</p>
+							</div>
+							<div class="d-flex flex-column" style="gap: 15px">
+								<h5 style="margin-bottom: 5px">Navigation</h5>
+								<p>Campaign</p>
+								<p>About us</p>
+							</div>
+							<div class="d-flex flex-column" style="gap: 15px">
+								<h5 style="margin-bottom: 5px">Reach us</h5>
+								<p>Instagram</p>
+								<p>Twitter</p>
+								<p>Telegram</p>
+							</div>
+						</div>
+					</div>
+					<div class="line" style="margin: 50px 0 30px 0"></div>
+					<div
+						class="d-flex flex-column align-items-center justify-content-center"
+						style="margin-bottom: 20px"
+					>
+						<h6 class="accent-100 normal">FridgeBridge</h6>
+						<p style="color: #4c7c90">All rights reserved</p>
+					</div>
+				</section>
+			</div>
 		</div>
 	</body>
 </html>
