--- a/anual/frontend/html/collaborator-dash/home.html
+++ b/anual/frontend/html/collaborator-dash/home.html
@@ -13,6 +13,12 @@
 		<link rel="stylesheet" href="../../css/home.css" />
 		<link rel="stylesheet" href="../../css/forms.css" />
 		<link rel="stylesheet" href="../../css/base.css" />
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+		integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+		crossorigin=""/> <!-- Make sure you put this AFTER Leaflet's CSS -->
+	 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+		 integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+		 crossorigin=""></script>
 	</head>
 
 	<body>
@@ -248,6 +254,7 @@
 			class="my-card d-flex flex-column justify-content-center overflow-auto"
 			style="width: 650px; max-height: 100%"
 		>
+
 			<p class="small accent-100 align-self-end btn" id="modal-close">X</p>
 			<div class="my-modal-content" id="modal-content"></div>
 		</div>
